--- a/ChatServer/appsettings.json
+++ b/ChatServer/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=postgres;Port=5432;User ID=postgres;Password=postgres;Database=chat"
+    }
 }
